<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.karen.semana4.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_relativelayout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnRelativeLayout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_linearlayout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnLinearLayout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aula_sobre_gridlayout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GridLayout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projeto_interface_relativelayout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnInterfaceRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visualizar_projeto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projeto_interface_linearlayout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnInterfaceLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visualizar_projeto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="2dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/projeto_interface_gridlayout"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnInterfaceGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visualizar_projeto" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
