<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_interface_relative_layout"
    tools:context="br.com.karen.semana4.InterfaceRelativeLayoutActivity">

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/to_label"/>

    <EditText
        android:id="@+id/edit_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/to_hint"
        android:layout_toRightOf="@+id/to_label"
        android:layout_alignParentRight="true"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/send"/>

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:gravity="top"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/to_label"
        android:layout_above="@+id/send_button"
        android:paddingTop="20dp"/>

</RelativeLayout>
